@@ -1,5 +1,12 @@
 2006-03-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* java/math/RoundingMode.java:
+	Fixed serialization UID.
+	* java/net/Proxy.java:
+	(Type): Likewise.
+	
+2006-03-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* java/io/CharArrayWriter.java:
 	(append(char)): Documented.
 	(append(CharSequence)): Likewise.
